Added a floating clock control to the last tab.
Adjusted parameter ranges and chart range to keep protein level on the chart in last tab.
Lengthened the DNA strand on the 1st tab so edges aren't seen when zooming in/out.
Fixed an issue where background cells were too large.
# 0.00.13 (61026) Feb 6, 2012
2/6/12 Deploying to dev for review and feedback.
Added counter to protein collection area for number of instances of a given protein.
Added better hint for indicating that user needs to move protein into collection area - area flashes when protein produced.
Made the DNA shape change when being transcribed.
Changed wording in protein capture are to make it clearer that it is protein TYPES that complete the collection.
Changed labels on transcription factors to use words rather than "+" and "-" symbols.
Tweaked model params on last tab to make it more responsive to changes.
Increased protein size to make them, and the capture area, more eye catching.
Optimized cell placement algorithm.
# 0.00.12 (60483) Jan 20, 2012
1/20/12 Publishing to dev for potential use in classroom setting.
Temporarily removed the Protein Levels tab so that a version with only working tabs can be published.
Renamed tabs.
Changed the background color on all tabs to be black when outside of a cell.
Changed cell placement algorithm on 3rd tab to look more random and therefore realistic.
Added a dialog that shows real E. Coli cells in the 3rd tab.
Change cell shapes to look roughly like E. Coli.
Added zoom in/out feature on 1st tab.
Completed integration of numerical model on 3rd tab.
Got mRNA destroyer working.
# 0.00.11 (59967) Jan 6, 2012
1/6/12 Snapshot of version reviewed with biology expert.
Implemented first cut of third tab, which allows the user to tweak cell parameters for one or several cells and see how protein levels change.
Fixed an issue where mRNA would be above the ribosome in the z-order in some cases, which looked weird.
Added placement hint for mRNA destroyer.